# unions

./: .gitignore  README.md
results/: plot.py  results-final.csv
src/: CMakeLists.txt
src/tests/: CMakeLists.txt  test_visitor.cpp
src/unions/: CMakeLists.txt  benchmarks.hpp  dod.hpp  initialise.hpp  main.cpp  oop.hpp  tagged_union.hpp  types.hpp  variant.hpp
